# tfinfer

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  image.cpp  image.h  main.c  meson.build  tf_api.c  tf_api.h  tf_buffer.c  tf_buffer.h  tf_infer.c  tflite_api.c  tflite_api.h  tflite_infer.c
